--- a/FoodMonkey/FoodMonkey/FoodMonkey.csproj
+++ b/FoodMonkey/FoodMonkey/FoodMonkey.csproj
@@ -162,6 +162,7 @@
       <DependentUpon>FoodMonkeyModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -215,7 +216,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Admin\ViewAllUserInfo.cshtml" />
     <Content Include="Views\Admin\AddAdmin.cshtml" />
     <Content Include="Views\Admin\EditUserInfo.cshtml" />
@@ -226,7 +226,7 @@
     <Content Include="Views\Admin\DeleteUserInfo.cshtml" />
     <Content Include="Views\Admin\SendAnnoucement.cshtml" />
     <Content Include="Views\Admin\DeleteAnnouncement.cshtml" />
-    <Content Include="Views\Admin\EditProfile.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
